--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Editor",
+  "name": "Text-Editor",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
